--- a/index.html
+++ b/index.html
@@ -2023,16 +2023,16 @@ Communities&gt;</a></li><a class="t794__typo t-name t-name_xs" style="color:#f5f
 </li>
 <li class="t450__list_item"><a class="t-menu__link-item " href="#faq" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5">F.A.Q</a>
 </li>
-<li class="t450__list_item"><a class="t-menu__link-item " href="#game" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">Game</a>
+<!-- <li class="t450__list_item"><a class="t-menu__link-item " href="#game" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">Game</a>
 </li>
 <li class="t450__list_item"><a class="t-menu__link-item " href="https://browser.mbechain.com/" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">mainnet</a>
-</li>
+</li> -->
 <!--<li class="t450__list_item"><a class="t-menu__link-item " href="https://browser.mbechain.com" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">testnet </a>-->
 <!--</li>-->
-<li class="t450__list_item"><a class="t-menu__link-item " href="https://apps.xfenfa.cn/Dongle" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">Wallet </a>
+<!-- <li class="t450__list_item"><a class="t-menu__link-item " href="https://apps.xfenfa.cn/Dongle" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">Wallet </a>
 </li>
 <li class="t450__list_item"><a class="t-menu__link-item " href="#AuditReport.pdf" data-menu-submenu-hook="" target="_blank" style="color:#ffffff;font-size:24px;" data-menu-item-number="5" rel="noopener">Audit </a>
-</li>
+</li> -->
 </ul>
 </div>
 </div>
