--- a/index.html
+++ b/index.html
@@ -1992,7 +1992,7 @@ Communities&gt;</a></li><a class="t794__typo t-name t-name_xs" style="color:#f5f
 <a class="tn-atom" href="#menuopen"> <img class="tn-atom__img t-img loaded"  imgfield="tn_img_1625152730364" src="./coinFiles/Group_123866_1.svg"> </a>
 </div>
 <div class="t396__elem tn-elem tn-elem__4088367461628073037058" data-elem-id="1628073037058" data-elem-type="image" data-field-top-value="22" data-field-top-res-960-value="22" data-field-top-res-640-value="22" data-field-top-res-480-value="22" data-field-top-res-320-value="23" data-field-left-value="40" data-field-left-res-960-value="36" data-field-left-res-640-value="10" data-field-left-res-480-value="10" data-field-left-res-320-value="12" data-field-width-value="172" data-field-width-res-320-value="163" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="window" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="px" data-field-filewidth-value="483" data-field-fileheight-value="72" data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits" style="left: 40px; top: 22px; width: 172px;">
-<a class="tn-atom" href="#"> <img class="tn-atom__img t-img loaded" imgfield="tn_img_1628073037058" src="./coinFiles/small-logo.png"> </a>
+<a class="tn-atom" href="#"> <img class="tn-atom__img t-img loaded" imgfield="tn_img_1628073037058" src="./coinFiles/LOGO1.png"> </a>
 </div>
 </div>
 </div>
