--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,7 @@ animation-direction: reverse;
 </div>
 <!--导航栏LOGO-->
 <div class="t396__elem tn-elem tn-elem__4088367451625132324184" data-elem-id="1625132324184" data-elem-type="image" data-field-top-value="22" data-field-left-value="40" data-field-width-value="172" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="window" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="px" data-field-filewidth-value="483" data-field-fileheight-value="72" data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits" style="left: 40px; top: 22px; width: 172px;">
-<a class="tn-atom" href="#"> <img class="tn-atom__img t-img loaded"  imgfield="tn_img_1625132324184" src="./coinFiles/small-logo.png"> </a>
+<a class="tn-atom" href="#"> <img class="tn-atom__img t-img loaded"  imgfield="tn_img_1625132324184" src="./coinFiles/LOGO1.png"> </a>
 </div>
 <div class="t396__elem tn-elem tn-elem__4088367451625061258917" data-elem-id="1625061258917" data-elem-type="button" data-field-top-value="17" data-field-left-value="236" data-field-height-value="37" data-field-width-value="106" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="" data-fields="top,left,width,height,container,axisx,axisy,caption,leftunits,topunits" style="top: 17px; left: 363px; width: 106px; height: 37px;">
 <a class="tn-atom" data-toggle="modal" data-target="#exampleModal">Communities</a>
