--- a/index.html
+++ b/index.html
@@ -1556,13 +1556,13 @@ the MxmBoxcEus community.
 <div class="modal-body-right">
 <ul class="modal-body-icon">
 	<li>
-<a href="https://t.me/bilibili_bsc">
+<a href="https://t.me/PilipiliGlobal">
 <img src="./coinFiles/Group_123876.svg">
 </a>
 <p>Telegramcn</p>
 </li>
 <li>
-<a href="https://t.me/bilibili_bsc">
+<a href="https://t.me/PilipiliGlobal">
 <img src="./coinFiles/Group_123876.svg">
 </a>
 <p>Telegramen</p>
@@ -3092,7 +3092,7 @@ $PiliPili</strong>
 <div>
     <div class="t396__elem tn-elem tn-elem__4087875691643892973086 vaint1 t-sbs-anim_started t-sbs-anim_reversed" data-elem-id="1643892973086" data-elem-type="button" data-field-top-value="532" data-field-top-res-960-value="522" data-field-top-res-640-value="442" data-field-top-res-480-value="462" data-field-top-res-320-value="305" data-field-left-value="20" data-field-left-res-960-value="10" data-field-left-res-640-value="10" data-field-left-res-480-value="10" data-field-left-res-320-value="0" data-field-height-value="65" data-field-height-res-320-value="53" data-field-width-value="258" data-field-width-res-320-value="171" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-mobile="y" data-animate-sbs-event="hover" data-animate-sbs-opts="[{&#39;mx&#39;:&#39;0&#39;,&#39;my&#39;:&#39;0&#39;,&#39;sx&#39;:&#39;1&#39;,&#39;sy&#39;:&#39;1&#39;,&#39;op&#39;:&#39;1&#39;,&#39;ro&#39;:&#39;0&#39;,&#39;bl&#39;:&#39;0&#39;,&#39;ti&#39;:&#39;0&#39;},{&#39;mx&#39;:&#39;0&#39;,&#39;my&#39;:&#39;0&#39;,&#39;sx&#39;:&#39;1&#39;,&#39;sy&#39;:&#39;1&#39;,&#39;op&#39;:&#39;1&#39;,&#39;ro&#39;:&#39;0&#39;,&#39;bl&#39;:&#39;0&#39;,&#39;ti&#39;:0},{&#39;mx&#39;:&#39;0&#39;,&#39;my&#39;:&#39;0&#39;,&#39;sx&#39;:0.95,&#39;sy&#39;:0.95,&#39;op&#39;:&#39;1&#39;,&#39;ro&#39;:&#39;0&#39;,&#39;bl&#39;:&#39;0&#39;,&#39;ti&#39;:200,&#39;ea&#39;:&#39;bounceFin&#39;}]" data-fields="top,left,width,height,container,axisx,axisy,caption,leftunits,topunits" style="top: 532px; left: 147px; width: 258px; height: 65px; margin-top: 100px;" data-planned-dir="">
 
-<div class="tn-atom__sbs-anim-wrapper js-sbs-anim-trigger_hover" style="display: table; width: inherit; height: inherit;"><a class="tn-atom" href="https://t.me/bilibili_bsc" target="_blank" rel="noopener">Telegram</a></div></div>
+<div class="tn-atom__sbs-anim-wrapper js-sbs-anim-trigger_hover" style="display: table; width: inherit; height: inherit;"><a class="tn-atom" href="https://t.me/PilipiliGlobal" target="_blank" rel="noopener">Telegram</a></div></div>
 	
 	
 	
@@ -16855,16 +16855,16 @@ growth of support program rewards over time</span></div>
 <li class="footer_item"><a href="/" class="footer_link"><img src="./static/rd.svg" alt="">Reddit</a></li>
 <li class="footer_item"><a href="/" class="footer_link"><img src="./static/md_1.svg" alt="">Medium</a></li>
 	-->
-	<li class="footer_item"><a href="https://t.me/bilibili_bsc" class="footer_link"><img src="./coinFiles/tg_1.svg" alt="">Telegramcn</a></li>
+	<li class="footer_item"><a href="https://t.me/PilipiliGlobal" class="footer_link"><img src="./coinFiles/tg_1.svg" alt="">Telegramcn</a></li>
 	
-<li class="footer_item"><a href="https://t.me/bilibili_bsc" class="footer_link"><img src="./coinFiles/tg_1.svg" alt="">Telegramen</a></li>
+<li class="footer_item"><a href="https://t.me/PilipiliGlobal" class="footer_link"><img src="./coinFiles/tg_1.svg" alt="">Telegramen</a></li>
 	
 <li class="footer_item"><a href="https://twitter.com/bilibili_bsc "class="footer_link"><img src="./coinFiles/tw_1.svg" alt="">Twitter</a></li>
 <li class="footer_item"><a href="mailto:info@mbecoin.com" class="footer_link">
 <div style="display: inline-flex; align-items: center;justify-content: center; vertical-align: middle;width: 32px; height: 26px;"><img src="./coinFiles/em.svg" alt="" style="width: 20px;"></div>Mailbox</a></li>
 
-<li class="footer_item"><a href="https://s65535.com/bilibili_bsc "class="footer_link"><img src="./coinFiles/vicot1.png" style="width:26px; margin: 0 4px;" alt="">Btok(中文)</a></li>
-<li class="footer_item"><a href="https://0.plus/bilibili_bsc " class="footer_link"><img src="./coinFiles/vicot1.png" style="width:26px; margin: 0 4px;" alt="">Btok(English)</a></li>
+<li class="footer_item"><a href="https://t.me/PilipiliGlobal"class="footer_link"><img src="./coinFiles/vicot1.png" style="width:26px; margin: 0 4px;" alt="">Btok(中文)</a></li>
+<li class="footer_item"><a href="https://t.me/PilipiliGlobal" class="footer_link"><img src="./coinFiles/vicot1.png" style="width:26px; margin: 0 4px;" alt="">Btok(English)</a></li>
 </ul></div>
 <style>
                 .footer ul {
