--- a/index.html
+++ b/index.html
@@ -5940,15 +5940,10 @@ Send information
 	
 	
 	
-	<video class="edui-faked-video       video-js" controls="" data-setup="{}" preload="auto" src="./coinFiles/view.mp4" width="100%">
-	<source src="./coinFiles/view.mp4" type="video/mp4"> </video>
-<source src="./coinFiles/view.mp4" type="video/mp4"><source src="./coinFiles/view.mp4" type="video/mp4"> 
-<span style="text-align: center"></span> <span style="text-align: center"></span>
+
+     <h1>BEST MEME✅</h1>
 	
-	
-	
-	
-	
+     <img class="tn-atom__img t-img mewmew loaded"  imgfield="tn_img_1643895735237" style="width: 415px;" src="./coinFiles/rightTop.png"> </div>
 	
 	
 	
