--- a/index.html
+++ b/index.html
@@ -5940,13 +5940,15 @@ Send information
 	
 	
 	
+<h1 >SAFE   DEV   ✅</h1>
+     <h1>--------------------------</h1>
+     <h1>BEST  &nbsp;  MEME ✅</h1>
 
-     <h1>BEST MEME✅</h1>
-	
-     <img class="tn-atom__img t-img mewmew loaded"  imgfield="tn_img_1643895735237" style="width: 415px;" src="./coinFiles/rightTop.png"> </div>
-	
-	
-	
+     <h1>--------------------------</h1>
+     <h1> Experienced team ✅</h1>
+     <h1>--------------------------</h1>
+     <h1>  Huge marketing plan✅</h1>
+
 	
 	
 	
