--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <link rel="stylesheet" href="./coinFiles/bootstrap.min(1).css">
 
 <script src="./coinFiles/bootstrap.min.js.下载"></script>
-<link rel="shortcut icon" href="./coinFiles/fee.png" type="image/x-icon">
+<link rel="shortcut icon" href="./coinFiles/headerLogo1.png" type="image/x-icon">
 <script src="./coinFiles/tilda-fallback-1.0.min.js.下载" charset="utf-8" async=""></script>
 <link rel="stylesheet" href="./coinFiles/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr=&#39;y&#39;;">
 <link rel="stylesheet" href="./coinFiles/tilda-blocks-2.14cd90.css" type="text/css" media="all" onerror="this.loaderr=&#39;y&#39;;">
