--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@ animation-direction: reverse;
 <div class="t396__elem tn-elem tn-elem__4088367451643897951428" data-elem-id="1643897951428" data-elem-type="button" data-field-top-value="17" data-field-left-value="613" data-field-height-value="37" data-field-width-value="144" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="" data-fields="top,left,width,height,container,axisx,axisy,caption,leftunits,topunits" style="top: 17px; left: 740px; width: 144px; height: 37px;">
 </div>
 <div class="t396__elem tn-elem tn-elem__4088367451643898084916" data-elem-id="1643898084916" data-elem-type="button" data-field-top-value="12" data-field-left-value="-60" data-field-height-value="45" data-field-width-value="149" data-field-axisy-value="top" data-field-axisx-value="right" data-field-container-value="window" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="" data-fields="top,left,width,height,container,axisx,axisy,caption,leftunits,topunits" style="top: 12px; left: 1245px; width: 149px; height: 45px;">
-<a class="tn-atom" href="https://pancakeswap.finance/swap?outputCurrency=BNB&amp;inputCurrency=0x086DDd008e20dd74C4FB216170349853f8CA8289" target="_blank" rel="noopener">Buy now</a>
+<a class="tn-atom" href="https://pancakeswap.finance/swap?outputCurrency=BNB&amp;inputCurrency=" target="_blank" rel="noopener">Buy now</a>
 </div>
 </div>
 </div>
